# gtin

./: .devcontainer.json  .flake8  .gitignore  .pypirc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  bitbucket-pipelines.yml  clean.py  distribute.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_install_requires.py  tox.ini
.github/workflows/: codeql-analysis.yml  test-distribute.yml
docs/: Makefile  conf.py  index.rst  make.bat
gtin/: GCPPrefixFormatList.xml  __init__.py  __init__.pyi  __main__.py
gtin/gcp/: GCPPrefixFormatList.xml  __init__.py  __init__.pyi
scripts/: clean.py  conda_distribute.py  distribute.py  pypi_distribute.py  setup_install_requires.py  update_gcp_prefix_format_list.py
tests/: test_gtin.py
