[metadata]
name = gtin
version = 1.0.1631641032
author_email = david@belais.me
description = Parse GTINs (also known as UPC/EAN/JAN/ISBN)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gtin, upc, ean, jan, isbn, gs1
license = MIT
url = https://github.com/davebelais/gtin

[options]
python_requires = ~=3.6
packages = find:
include_package_data = True

[options.data_files]
gtin = 
	gtin/GCPPrefixFormatList.xml

[options.entry_points]
console_scripts = 
	gtin = gtin.__main__:main

